Complete S04 D05 registry API with integration tests and dev environment

--- a/docs/evidence/S04.md
+++ b/docs/evidence/S04.md
@@ -3,35 +3,122 @@
 ## Segment
 - ID: S04
 - Deliverable(s): D05
-- Date:
+- Date: 2026-02-12
 
 ## Code Changes
 - Files changed:
+  - `src/api/__init__.py`
+  - `src/api/main.py`
+  - `src/api/app.py`
+  - `src/api/auth.py`
+  - `src/api/models.py`
+  - `src/api/store.py`
+  - `src/api/manifest_validation.py`
+  - `tests/conftest.py`
+  - `tests/integration/test_registry_api.py`
+  - `Dockerfile`
+  - `docker-compose.yml`
+  - `Makefile`
+  - `requirements.txt`
 - Summary:
+  - Implemented D05 registry API with all required endpoints (CRUD, versions, namespace listing, search, health).
+  - Added request/response validation via FastAPI + Pydantic models.
+  - Added API-key auth and owner-based authorization for write routes.
+  - Added idempotency-key enforcement and replay-safe write response caching.
+  - Added manifest validation on register/update using D01 schema + secret-inline checks.
+  - Added capability discovery endpoint integration with D02 mock ranking/matching/recommendation.
+  - Added integration suite covering registration, search relevance for 10 D02 scenarios, versioning, permissions, and latency SLOs.
+  - Added Docker Compose environment (API + Postgres + Redis), Dockerfile, and Makefile commands.
 
 ## Test Commands Executed
 ```bash
-# paste exact commands
+python3 -m pip install -r requirements.txt
+pytest tests/integration -q
+pytest tests/segment_s03 -q
+pytest tests/capability_search -q
+pytest tests/manifest -q
+python3 - <<'PY'
+import statistics
+import time
+import yaml
+from pathlib import Path
+from fastapi.testclient import TestClient
+from src.api.app import app
+from src.api.store import STORE
+
+STORE.namespaces.clear(); STORE.agents.clear(); STORE.idempotency_cache.clear()
+client = TestClient(app)
+manifest = yaml.safe_load((Path('specs/manifest/examples/simple-tool-agent.yaml')).read_text())
+
+write_lat=[]
+for i in range(30):
+    m=yaml.safe_load(yaml.safe_dump(manifest))
+    m['identity']['id']=f'latency-agent-{i}'
+    m['identity']['version']='1.0.0'
+    t=time.perf_counter()
+    r=client.post('/v1/agents', json={'namespace':'@latency','manifest':m}, headers={'X-API-Key':'dev-owner-key','Idempotency-Key':f'lat-{i}'})
+    assert r.status_code==200
+    write_lat.append((time.perf_counter()-t)*1000)
+
+read_lat=[]
+for _ in range(120):
+    t=time.perf_counter()
+    r=client.get('/v1/agents', params={'namespace':'@latency','offset':0,'limit':30})
+    assert r.status_code==200
+    read_lat.append((time.perf_counter()-t)*1000)
+
+print(f'p95_write_ms={statistics.quantiles(write_lat, n=100)[94]:.3f}')
+print(f'p95_read_ms={statistics.quantiles(read_lat, n=100)[94]:.3f}')
+PY
+docker compose config -q
 ```
 
 ## Test Results
 - Passed:
+  - `pytest tests/integration -q` -> `8 passed`
+  - `pytest tests/segment_s03 -q` -> `8 passed`
+  - `pytest tests/capability_search -q` -> `15 passed`
+  - `pytest tests/manifest -q` -> `9 passed`
+  - Latency sample: `p95_write_ms=32.229`, `p95_read_ms=1.991`
+  - `docker compose config -q` -> valid compose configuration
 - Failed:
+  - None
 - Skipped:
+  - None
 
 ## Verification Evidence
 - API contract validation:
+  - Integration tests validate all D05 routes and behavior:
+    - `/v1/agents` POST/GET
+    - `/v1/agents/{id}` GET/PUT/DELETE
+    - `/v1/capabilities/search` POST
+    - `/v1/agents/{id}/versions` GET
+    - `/v1/agents/{id}/versions/{v}` GET
+    - `/v1/namespaces/{ns}` GET
+    - `/healthz` GET
+  - Search relevance validated against 10 D02 scenarios in `tests/integration/test_registry_api.py`.
 - Security validation:
+  - Write routes require API key and idempotency key.
+  - Owner mismatch on update/delete returns 403.
+  - Invalid manifests rejected with descriptive validation errors.
 - Cost/latency validation:
+  - P95 read latency target `<200ms` and write target `<500ms` met in local test run.
+  - Cost-related filter behavior exercised through D02 scenario tests (`max_cost_usd`, trust threshold constraints).
 - Logs/screenshots:
+  - Test and command outputs recorded in this evidence document; no screenshots required.
 
 ## Known Risks
-- 
+- Current storage layer is in-memory for fast iteration; D05 persistence migration to full Postgres-backed runtime is planned in subsequent segments.
+- Capability indexing currently uses deterministic mock ranking sources from D02 rather than production embedding pipelines.
 
 ## Next Segment Handoff
-- Recommended next segment:
+- Recommended next segment: S05
 - Required context for next segment:
+  - Registry API implementation baseline: `src/api/`
+  - D02 search contract + ranking assumptions integrated in endpoint behavior
+  - Dev/runtime commands: `Makefile`, `docker-compose.yml`
+  - Existing integration coverage to extend for eval framework coupling
 
 ## Mandatory Confirmation
-- [ ] `docs/agenthub-master-plan-v1.2.docx` updated
-- [ ] `docs/DELIVERABLE_LOG.md` updated
+- [x] `docs/agenthub-master-plan-v1.2.docx` updated
+- [x] `docs/DELIVERABLE_LOG.md` updated
