Complete S06 D11 trust scoring core with anti-gaming and trust API

--- a/docs/evidence/S06.md
+++ b/docs/evidence/S06.md
@@ -3,35 +3,94 @@
 ## Segment
 - ID: S06
 - Deliverable(s): D11
-- Date:
+- Date: 2026-02-12
 
 ## Code Changes
 - Files changed:
+  - `src/trust/__init__.py`
+  - `src/trust/storage.py`
+  - `src/trust/scoring.py`
+  - `tools/trust/recompute_trust.py`
+  - `docs/trust/TRUST_SCORING.md`
+  - `data/trust/usage_events.json`
+  - `data/trust/reviews.json`
+  - `data/trust/security_audits.json`
+  - `data/trust/incidents.json`
+  - `data/trust/publisher_profiles.json`
+  - `data/trust/scores.json`
+  - `src/api/app.py`
+  - `src/api/models.py`
+  - `tests/trust/test_trust_scoring.py`
+  - `tests/integration/test_registry_api.py`
+  - `Makefile`
 - Summary:
+  - Implemented D11 trust/reputation scoring core with weighted signals and incident penalty model.
+  - Added trust tier assignment and badge mapping (Unverified/Community/Verified/Trusted/Certified).
+  - Added anti-gaming controls:
+    - Sybil trust accumulation delay (30-day ramp)
+    - Publisher reputation gating based on independent usage
+    - Canary failure clamp/flag in security signal
+    - Verified-usage review filtering
+  - Added trust API endpoint: `GET /v1/agents/{id}/trust`.
+  - Added usage-event endpoint for recalculation path: `POST /v1/agents/{id}/trust/usage`.
+  - Added trust recomputation CLI and Makefile command.
+  - Integrated trust summary into agent detail payload for badge-ready UI surfaces.
 
 ## Test Commands Executed
 ```bash
-# paste exact commands
+pytest tests/trust -q
+pytest tests/integration -q
+pytest tests/eval -q
+pytest tests/capability_search -q
+pytest tests/manifest -q
+pytest tests/segment_s03 -q
+python3 tools/trust/recompute_trust.py --agent-id @demo:invoice-summarizer --owner owner-dev
+make trust
+pytest -q
 ```
 
 ## Test Results
 - Passed:
+  - `pytest tests/trust -q` -> `2 passed`
+  - `pytest tests/integration -q` -> `10 passed`
+  - `pytest tests/eval -q` -> `3 passed`
+  - `pytest tests/capability_search -q` -> `15 passed`
+  - `pytest tests/manifest -q` -> `9 passed`
+  - `pytest tests/segment_s03 -q` -> `8 passed`
+  - Full suite `pytest -q` -> `47 passed`
+  - Trust CLI outputs include score/tier/badge/breakdown/flags.
 - Failed:
+  - None
 - Skipped:
+  - None
 
 ## Verification Evidence
 - API contract validation:
+  - `GET /v1/agents/{id}/trust` returns detailed trust breakdown and tier metadata.
+  - Integration test verifies recalculation behavior from usage events and new eval results.
 - Security validation:
+  - Anti-gaming assertions validated in unit tests:
+    - Sybil delay flags
+    - Canary failure detection flag
+    - Unverified review exclusion
+    - Publisher independent-usage gating
 - Cost/latency validation:
+  - Trust score breakdown includes usage and incident-aware penalty model.
+  - Usage-event endpoint captures `cost_usd` and `latency_ms` for trust signal evolution.
 - Logs/screenshots:
+  - CLI trust output captured in command logs; no screenshots required.
 
 ## Known Risks
-- 
+- Trust signals currently use local JSON stores; distributed consistency and event-stream ingestion will require hardening in later segments.
+- Community/security inputs are operator-fed at this stage and need stronger provenance controls before production exposure.
 
 ## Next Segment Handoff
-- Recommended next segment:
+- Recommended next segment: S07
 - Required context for next segment:
+  - Trust API contract and scoring model: `src/trust/scoring.py`, `docs/trust/TRUST_SCORING.md`
+  - Trust data schemas and local stores: `data/trust/*.json`, `src/trust/storage.py`
+  - Registry integration points: `src/api/app.py` trust endpoints and detail payload fields
 
 ## Mandatory Confirmation
-- [ ] `docs/agenthub-master-plan-v1.2.docx` updated
-- [ ] `docs/DELIVERABLE_LOG.md` updated
+- [x] `docs/agenthub-master-plan-v1.2.docx` updated
+- [x] `docs/DELIVERABLE_LOG.md` updated
