Complete S09 D08(min)+D17(min) CLI path and seed dogfood evidence

--- a/docs/evidence/S09.md
+++ b/docs/evidence/S09.md
@@ -3,35 +3,109 @@
 ## Segment
 - ID: S09
 - Deliverable(s): D08+D17(min)
-- Date:
+- Date: 2026-02-12
 
 ## Code Changes
 - Files changed:
+  - `.gitignore`
+  - `Makefile`
+  - `requirements.txt`
+  - `pyproject.toml`
+  - `agenthub/__init__.py`
+  - `agenthub/cli.py`
+  - `seed/agents/web-researcher.yaml`
+  - `seed/agents/data-normalizer.yaml`
+  - `seed/agents/pipeline-planner.yaml`
+  - `docs/seed/DOGFOOD_MIN.md`
+  - `tests/cli/test_agenthub_cli.py`
+  - `tests/seed/test_seed_manifests.py`
 - Summary:
+  - Implemented D08(min) CLI path as installable `agenthub` package with 10 commands:
+    - `init`, `validate`, `publish`, `search`, `install`, `run`, `eval`, `versions`, `login`, `whoami`
+  - Added `--json` mode coverage across all commands for deterministic automation integration.
+  - Added local/offline registry mode for `publish/search/versions`.
+  - Added `AGENTHUB_HOME` support for CLI state and test isolation.
+  - Implemented D17(min) seed artifacts with three schema-valid agents:
+    - `web-researcher`, `data-normalizer`, `pipeline-planner`
+  - Added minimum dogfood runbook doc and CLI/seed verification tests.
 
 ## Test Commands Executed
 ```bash
-# paste exact commands
+pytest tests/seed -q
+pytest tests/cli -q
+pytest -q
+
+TMP_WS="$(mktemp -d)"
+export AGENTHUB_HOME="$TMP_WS/state"
+cd "$TMP_WS"
+python -m agenthub.cli init seed-agent --json
+python -m agenthub.cli validate seed-agent/agent.yaml --json
+python -m agenthub.cli login --api-key dev-owner-key --api-url http://127.0.0.1:8000 --json
+python -m agenthub.cli whoami --json
+python -m agenthub.cli publish /Users/demarioasquitt/Desktop/Projects/Entrepreneurial/agent-hub/seed/agents/web-researcher.yaml --namespace @seed --local --json
+python -m agenthub.cli publish /Users/demarioasquitt/Desktop/Projects/Entrepreneurial/agent-hub/seed/agents/data-normalizer.yaml --namespace @seed --local --json
+python -m agenthub.cli publish /Users/demarioasquitt/Desktop/Projects/Entrepreneurial/agent-hub/seed/agents/pipeline-planner.yaml --namespace @seed --local --json
+python -m agenthub.cli search "normalize records" --local --json
+python -m agenthub.cli install @seed:pipeline-planner --json
+python -m agenthub.cli run @seed:pipeline-planner --input "task=plan" --json
+python -m agenthub.cli eval --manifest /Users/demarioasquitt/Desktop/Projects/Entrepreneurial/agent-hub/seed/agents/data-normalizer.yaml --agent-id @seed:data-normalizer --json
+python -m agenthub.cli versions @seed:pipeline-planner --local --json
+PYTHONPATH=/Users/demarioasquitt/Desktop/Projects/Entrepreneurial/agent-hub python - <<'PY'
+from fastapi.testclient import TestClient
+from src.api.app import app
+c = TestClient(app)
+r = c.post('/v1/delegations', json={
+    'requester_agent_id':'@seed:pipeline-planner',
+    'delegate_agent_id':'@seed:data-normalizer',
+    'task_spec':'Normalize pipeline input and return structured dataset',
+    'estimated_cost_usd':9.0,
+    'max_budget_usd':20.0,
+    'simulated_actual_cost_usd':8.2,
+}, headers={'X-API-Key':'dev-owner-key'})
+print({'create_status': r.status_code, 'delegation_id': r.json()['delegation_id'], 'state': r.json()['status'], 'budget_controls': r.json()['budget_controls']})
+did = r.json()['delegation_id']
+r2 = c.get(f'/v1/delegations/{did}/status')
+print({'status_status': r2.status_code, 'lifecycle_stages': [x['stage'] for x in r2.json()['lifecycle']], 'audit_events': len(r2.json()['audit_trail'])})
+PY
 ```
 
 ## Test Results
 - Passed:
+  - `pytest tests/seed -q` -> `2 passed`
+  - `pytest tests/cli -q` -> `1 passed`
+  - Full suite `pytest -q` -> `58 passed`
+  - CLI runbook commands succeeded for init/validate/login/whoami/publish/search/install/run/eval/versions.
+  - Delegation smoke succeeded with completed lifecycle and audit events.
 - Failed:
+  - None
 - Skipped:
+  - None
 
 ## Verification Evidence
 - API contract validation:
+  - Seed manifests validate with canonical D01 schema checks.
+  - CLI local publish/search/version paths return structured JSON payloads for automation use.
 - Security validation:
+  - Delegation run smoke confirms budget controls and stage-wise audit trails remain enforced (`soft_alert`, `ratio`, six-stage lifecycle).
+  - CLI state isolation (`AGENTHUB_HOME`) prevents cross-session credential/config contamination.
 - Cost/latency validation:
+  - Eval output captures deterministic latency/cost metrics (`latency_ms`, `cost_usd`) for seed agent checks.
+  - Delegation output captures budget ratio and guardrail status (`80/100/120` policy path from D13).
 - Logs/screenshots:
+  - Command transcript captured in session command output; screenshots not required.
 
 ## Known Risks
-- 
+- `pipeline-planner` capability category is `orchestration`; current tier1 runner scores only `reasoning/transformation/action`, so planner evals report zero checks unless tier mappings are expanded.
+- Local registry mode is file-backed and single-user; multi-actor conflict handling is deferred.
 
 ## Next Segment Handoff
-- Recommended next segment:
+- Recommended next segment: S10
 - Required context for next segment:
+  - CLI package and command surface: `agenthub/cli.py`
+  - Seed manifests and dogfood runbook: `seed/agents/`, `docs/seed/DOGFOOD_MIN.md`
+  - S09 verification tests: `tests/cli/test_agenthub_cli.py`, `tests/seed/test_seed_manifests.py`
+  - Latest regression baseline: `pytest -q` -> `58 passed`
 
 ## Mandatory Confirmation
-- [ ] `docs/agenthub-master-plan-v1.2.docx` updated
-- [ ] `docs/DELIVERABLE_LOG.md` updated
+- [x] `docs/agenthub-master-plan-v1.2.docx` updated
+- [x] `docs/DELIVERABLE_LOG.md` updated
